# pfi

./: .gitignore  Makefile  README.md  pyproject.toml
.config/: .pre-commit.yaml
pfi/: __init__.py
